Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41073

Can't setTextureCoordinatesTransform easily on a QQuickFramebufferObject derived class

XMLWordPrintable

      In order to setTextureCoordinatesTransform on a QQuickFramebufferObject I'm using the following hack.

      QSGNode *MyQQuickFramebufferObject::updatePaintNode(QSGNode *node, QQuickItem::UpdatePaintNodeData *nodeData)
      {
          if (!node) {
              node = QQuickFramebufferObject::updatePaintNode(node, nodeData);
              QSGSimpleTextureNode *n = static_cast<QSGSimpleTextureNode *>(node);
              if (n)
                  n->setTextureCoordinatesTransform(QSGSimpleTextureNode::MirrorVertically);
              return node;
          }
          return QQuickFramebufferObject::updatePaintNode(node, nodeData);
      }
      

      IMHO QQuickFramebufferObject should provide an easier way to setTextureCoordinatesTransform of its texture.

        For Gerrit Dashboard: QTBUG-41073
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes