Add a property to enable vertical mirroring in QQuickFramebufferObject

[ChangeLog] Added a mirrorVertically property to QQuickFramebufferObject.

Task-number: QTBUG-41073
Change-Id: Ib69cbfe7b2f6ae42913d857460431195ff92e53a
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>